--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -59,6 +59,7 @@
     "error-both-fields": "Bitte fülle alle Felder aus.",
     "error-comment": "Bitte gib eine Frage ein.",
     "error-title": "Bitte gib einen Titel ein.",
+    "exit-description": "Kommentar-Präsentationsmodus verlassen",
     "export": "Exportieren",
     "export-description": "Exportieren",
     "mark-correct": "Frage bejahen",
@@ -74,6 +75,7 @@
     "search-box-input-description": "Hier kannst du nach Fragen suchen.",
     "semicolon": "Standard-CSV",
     "send": "Senden",
+    "send-description": "Frage abschicken",
     "vote-down": "Frage abwerten",
     "vote-up": "Frage aufwerten"
   },
