Add suitable bilingual texts next to the sort funtion icons

--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -22,6 +22,9 @@
     "really-delete": "Willst du diese Frage wirklich löschen?",
     "search": "Suchen",
     "sort-comments": "Fragen sortieren",
+    "sort-vote-asc": "Positivste Bewertung zuerst",
+    "sort-vote-desc": "Negativste Bewertung zuerst",
+    "sort-list-time": "Neueste Frage zuerst",
     "time": "Chronologisch sortiert: letzte Frage zuerst",
     "vote-asc": "Aufsteigende Bewertungen",
     "vote-desc": "Absteigende Bewertungen",
