--- a/src/assets/i18n/creator/en.json
+++ b/src/assets/i18n/creator/en.json
@@ -22,6 +22,9 @@
     "really-delete": "Do you really want to delete this question?",
     "search": "Search",
     "sort-comments": "Sort questions",
+    "sort-vote-asc": "Best rating first",
+    "sort-vote-desc": "Worst rating first",
+    "sort-list-time": "Latest question first",
     "time": "Time",
     "unread": "Not discussed",
     "vote-asc": "Ascending votes",
