--- a/src/assets/i18n/participant/de.json
+++ b/src/assets/i18n/participant/de.json
@@ -32,6 +32,9 @@
     "read": "Im Hörsaal besprochen",
     "search": "Suchen",
     "sort-comments": "Fragen sortieren",
+    "sort-vote-asc": "Positivste Bewertung zuerst",
+    "sort-vote-desc": "Negativste Bewertung zuerst",
+    "sort-list-time": "Neueste Frage zuerst",
     "time": "Zeit",
     "unread": "Nicht im Hörsaal besprochen",
     "vote-asc": "Aufsteigende Bewertungen",
