--- a/src/assets/i18n/participant/en.json
+++ b/src/assets/i18n/participant/en.json
@@ -32,6 +32,9 @@
     "read": "Discussed by the professor",
     "search": "Search",
     "sort-comments": "Sort questions",
+    "sort-vote-asc": "Best rating first",
+    "sort-vote-desc": "Worst rating first",
+    "sort-list-time": "Latest question first",
     "time": "Time",
     "unread": "Not yet discussed",
     "vote-desc": "Descending votes",
