Add suitable bilingual texts next to the filter function icons

--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -18,6 +18,11 @@
     "correct": "Bejaht",
     "favorite": "Bonus-Frage",
     "filter-comments": "Fragen filtern",
+    "filter-correct": "Bejahte Fragen",
+    "filter-favorite": "Bonus-prämierte Fragen",
+    "filter-read": "Besprochene Fragen",
+    "filter-reset": "Zurücksetzen",
+    "filter-wrong": "Verneinte Fragen",
     "read": "Besprochen",
     "really-delete": "Willst du diese Frage wirklich löschen?",
     "search": "Suchen",
