--- a/src/assets/i18n/creator/en.json
+++ b/src/assets/i18n/creator/en.json
@@ -18,6 +18,11 @@
     "correct": "Marked as correct by you",
     "favorite": "Bonus question",
     "filter-comments": "Filter questions",
+    "filter-correct": "Affirmed questions",
+    "filter-favorite": "Questions awarded a bonus",
+    "filter-read": "Questions discussed",
+    "filter-reset": "Reset",
+    "filter-wrong": "Negated questions",
     "read": "Discussed",
     "really-delete": "Do you really want to delete this question?",
     "search": "Search",
