--- a/src/assets/i18n/participant/en.json
+++ b/src/assets/i18n/participant/en.json
@@ -29,6 +29,11 @@
     "correct": "Marked as correct by the professor",
     "favorite": "Bonus question",
     "filter-comments": "Filter questions",
+    "filter-correct": "Affirmed questions",
+    "filter-favorite": "Questions awarded a bonus",
+    "filter-read": "Questions discussed",
+    "filter-reset": "Reset",
+    "filter-wrong": "Negated questions",
     "read": "Discussed by the professor",
     "search": "Search",
     "sort-comments": "Sort questions",
