--- a/src/assets/i18n/participant/de.json
+++ b/src/assets/i18n/participant/de.json
@@ -29,6 +29,11 @@
     "correct": "Bejaht",
     "favorite": "Bonus-Frage",
     "filter-comments": "Fragen filtern",
+    "filter-correct": "Bejahte Fragen",
+    "filter-favorite": "Bonus-prämierte Fragen",
+    "filter-read": "Besprochene Fragen",
+    "filter-reset": "Zurücksetzen",
+    "filter-wrong": "Verneinte Fragen",
     "read": "Im Hörsaal besprochen",
     "search": "Suchen",
     "sort-comments": "Fragen sortieren",
