Add tokens for bonus points
Whenever a comment gets favorited, a token will be generated.
Participants can view theirs under the 'user account menu' in the header.
Session owners can view the given tokens for the room in the settings drop down menu for a room

--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -161,6 +161,8 @@
     "a11y-threshold": "Schieberegler zum Einstellen des Schwellenwerts für sichtbare Fragen",
     "abort": "Abbrechen",
     "answer-statistics": "Statistiken",
+    "bonus-token": "Tokens für Bonuspunkte",
+    "bonus-token-header": "Tokens für Bonuspunkte",
     "cancel": "Abbrechen",
     "cancel-description": "Abbrechen",
     "changes-successful": "Änderungen gespeichert.",
