Show hint when deleting all questions

--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -193,7 +193,8 @@
     "no-moderators": "",
     "present": "Präsentieren",
     "public-stream": "Fragen",
-    "really-delete-comments": "Willst du wirklich alle Fragen dieser Sitzung löschen? Die Aktion kann nicht rückgängig gemacht werden. Falls du Boni (gelbe Sterne) vergeben hast, exportiere alle Fragen, damit du eingereichte Bonus-Tokens überprüfen kannst.",
+    "really-delete-comments": "Willst du wirklich alle Fragen dieser Sitzung löschen? Die Aktion kann nicht rückgängig gemacht werden.",
+    "really-delete-comments-hint": "Hinweis: Mit Bonus versehene Fragen werden nicht gelöscht, solange diese markiert sind.",
     "really-remove-moderator": "Willst du folgenden Moderator wirklich entfernen?",
     "really2": " wirklich löschen? Die Aktion kann nicht rückgängig gemacht werden. Falls du Boni (gelbe Sterne) vergeben hast, exportiere alle Fragen, damit du eingereichte Bonus-Tokens überprüfen kannst.",
     "reallyContent": "Willst du die Frage ",
