--- a/src/assets/i18n/creator/en.json
+++ b/src/assets/i18n/creator/en.json
@@ -194,7 +194,8 @@
     "no-moderators": "No moderators yet",
     "present": "Present",
     "public-stream": "Questions",
-    "really-delete-comments": "Do you really want to delete all questions of this session? This action cannot be undone. If you have given bonuses (yellow stars), export all questions so that you can check submitted bonus tokens.",
+    "really-delete-comments": "Do you really want to delete all questions of this session? This action cannot be undone.",
+    "really-delete-comments-hint": "Hint: Bonus questions will not be deleted as long as they are marked.",
     "really-remove-moderator": "Do you really want to remove the following moderator?",
     "really2": "? This action cannot be undone. If you have given bonuses (yellow stars), export all questions so that you can check submitted bonus tokens.",
     "reallyContent": "Do you really want to delete content ",
