--- a/src/assets/i18n/creator/de.json
+++ b/src/assets/i18n/creator/de.json
@@ -194,7 +194,8 @@
     "present": "Präsentieren",
     "public-stream": "Fragen",
     "really-delete-comments": "Willst du wirklich alle Fragen dieser Sitzung löschen? Die Aktion kann nicht rückgängig gemacht werden.",
-    "really-delete-comments-hint": "Hinweis: Mit Bonus versehene Fragen werden nicht gelöscht, solange diese markiert sind.",
+    "really-delete-comments-hint": "Es gibt noch Fragen welche mit einem Bonus versehen sind. Bitte entfernen Sie die markierungen um alle Fragen zu löschen.",
+    "delete-comments-alt-header": "Achtung",
     "really-remove-moderator": "Willst du folgenden Moderator wirklich entfernen?",
     "really2": " wirklich löschen? Die Aktion kann nicht rückgängig gemacht werden. Falls du Boni (gelbe Sterne) vergeben hast, exportiere alle Fragen, damit du eingereichte Bonus-Tokens überprüfen kannst.",
     "reallyContent": "Willst du die Frage ",
