--- a/src/assets/i18n/creator/en.json
+++ b/src/assets/i18n/creator/en.json
@@ -195,7 +195,8 @@
     "present": "Present",
     "public-stream": "Questions",
     "really-delete-comments": "Do you really want to delete all questions of this session? This action cannot be undone.",
-    "really-delete-comments-hint": "Hint: Bonus questions will not be deleted as long as they are marked.",
+    "really-delete-comments-hint": "There are still questions which are provided with a bonus. Please remove the markers to delete all questions.",
+    "delete-comments-alt-header": "Attention",
     "really-remove-moderator": "Do you really want to remove the following moderator?",
     "really2": "? This action cannot be undone. If you have given bonuses (yellow stars), export all questions so that you can check submitted bonus tokens.",
     "reallyContent": "Do you really want to delete content ",
