add translation service in qr dialog

--- a/src/assets/i18n/home/en.json
+++ b/src/assets/i18n/home/en.json
@@ -228,5 +228,8 @@
   },
   "user-bonus-token-dialog": {
     "header": "Tokens for bonus points"
+  },
+  "qr-dialog": {
+    "session": "Session"
   }
 }
