--- a/src/assets/i18n/participant/de.json
+++ b/src/assets/i18n/participant/de.json
@@ -137,6 +137,7 @@
     "filter-favorite": "Favoriten",
     "filter-approved": "Bejaht",
     "filter-disapproved": "Verneint",
-    "filter-remove": "Filter entfernen"
+    "filter-remove": "Filter entfernen",
+    "a11y-introduction": "drücke 1 drücke 2"
   }
 }
