--- a/src/assets/i18n/participant/en.json
+++ b/src/assets/i18n/participant/en.json
@@ -63,6 +63,8 @@
     "a11y-comment_input": "Enter your question",
     "a11y-comment_vote_down": "Votes down this question",
     "a11y-comment_vote_up": "Votes up this question",
+    "a11y-comment-answer-not": "Create Answer",
+    "a11y-comment-answer": "View Answer",
     "a11y-text_correct": "This question was marked as correct.",
     "a11y-text_grade": "This question was marked as a bonus question.",
     "a11y-text_read": "This question was discussed in full view on the beamer",
